snapshots/serde/test_suite/tests/regression/issue2371.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 43
kind: unit
spaces: []
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    value: 1
    average: 1
    min: 1
    max: 1
    modified:
      sum: 1
      value: 1
      average: 1
      min: 1
      max: 1
  halstead:
    unique_operators: 14
    total_operators: 78
    unique_operands: 18
    total_operands: 55
    length: 133
    estimated_program_length: 128.362
    purity_ratio: 0.965
    vocabulary: 32
    volume: 665
    difficulty: 21.389
    level: 0.047
    effort: 14223.611
    time: 790.201
    bugs: 0.196
  loc:
    sloc: 43
    ploc: 38
    lloc: 0
    cloc: 0
    blank: 5
    sloc_average: 43
    ploc_average: 38
    lloc_average: 0
    cloc_average: 0
    blank_average: 5
    sloc_min: 43
    sloc_max: 43
    cloc_min: 0
    cloc_max: 0
    ploc_min: 38
    ploc_max: 38
    lloc_min: 0
    lloc_max: 0
    blank_min: 5
    blank_max: 5
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 187
    average: 187
    min: 187
    max: 187
  mi:
    original: 76.04
    sei: 34.103
    visual_studio: 44.468
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
