snapshots/serde/test_suite/tests/regression/issue2409.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 11
kind: unit
spaces: []
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    value: 1
    average: 1
    min: 1
    max: 1
    modified:
      sum: 1
      value: 1
      average: 1
      min: 1
      max: 1
  halstead:
    unique_operators: 12
    total_operators: 20
    unique_operands: 6
    total_operands: 9
    length: 29
    estimated_program_length: 58.529
    purity_ratio: 2.018
    vocabulary: 18
    volume: 120.928
    difficulty: 9
    level: 0.111
    effort: 1088.35
    time: 60.464
    bugs: 0.035
  loc:
    sloc: 11
    ploc: 9
    lloc: 1
    cloc: 0
    blank: 2
    sloc_average: 11
    ploc_average: 9
    lloc_average: 1
    cloc_average: 0
    blank_average: 2
    sloc_min: 11
    sloc_max: 11
    cloc_min: 0
    cloc_max: 0
    ploc_min: 9
    ploc_max: 9
    lloc_min: 1
    lloc_max: 1
    blank_min: 2
    blank_max: 2
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 46
    average: 46
    min: 46
    max: 46
  mi:
    original: 106.989
    sei: 78.754
    visual_studio: 62.567
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
